<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.hengtan.nanodegreeapp.stocount.StockPeriodActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppStoCountTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="@dimen/app_bar_height"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppStoCountTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="@dimen/keyline_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/keyline_margin"
                    android:paddingRight="@dimen/keyline_margin"
                    android:contentDescription="@string/cd_user_photo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_user_name"
                    android:contentDescription="@string/cd_user_name"
                    style="@style/Theme.StockPeriod.HeaderTitle" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_user_email"
                    android:contentDescription="@string/cd_user_email"
                    style="@style/Theme.StockPeriod.SubHeaderTitle" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_stock_period" />

    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/keyline_content_end_with_fab"
        android:contentDescription="@string/cd_fab_save_stock_period"
        android:src="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>
